# telegram-context-sync

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
scripts/: run_and_upload.bat  run_sync.bat  update_context_now.bat
src/telegram_context_sync/: __init__.py  cli.py  config.py  database.py  dialogs.py  exporter.py  google_docs.py  sync.py
